# muggled_sam

./: README.md  pyproject.toml  setup.py
muggled_sam.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
simple_examples/: video_segmentation_multiobj.py
